compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__const_unqualified_imported_no_label.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other.{Two}\npub const main = Two(1)\n"
snapshot_kind: text
---
----- SOURCE CODE
import other.{Two}
pub const main = Two(1)


----- COMPILED NIX
let
  other' = builtins.import ./../other.nix;
  inherit (builtins.import ./../other.nix) Two;
  
  main = Two 1;
in
{ inherit main; }
