compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__const_with_fields.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\ntype Mine {\n  Mine(a: Int, b: Int)\n}\n\nconst labels = Mine(b: 2, a: 1)\nconst no_labels = Mine(3, 4)\n"
---
let
  Mine = a: b: { __gleamTag = "Mine"; inherit a b; };
  
  labels = Mine 1 2;
  
  no_labels = Mine 3 4;
in {}
