compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__const_zero_arity_imported.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\nconst x = other.Two\n"
snapshot_kind: text
---
----- SOURCE CODE
import other
const x = other.Two


----- COMPILED NIX
let other' = builtins.import ./../other.nix; x = other'.Two; in { }
