compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__destructure_custom_type_with_mixed_fields_first_unlabelled.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\ntype Cat {\n  Cat(String, cuteness: Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(cuteness: y, ..) = cat\n  let Cat(x, cuteness: y) = cat\n  x\n}\n\n"
snapshot_kind: text
---
----- SOURCE CODE

type Cat {
  Cat(String, cuteness: Int)
}

fn go(cat) {
  let Cat(x, y) = cat
  let Cat(cuteness: y, ..) = cat
  let Cat(x, cuteness: y) = cat
  x
}



----- COMPILED NIX
let
  Cat = x0: cuteness: { __gleamTag = "Cat"; inherit cuteness; _0 = x0; };
  
  go =
    cat:
    let
      x = cat._0;
      y = cat.cuteness;
      y'1 = cat.cuteness;
      x'1 = cat._0;
      y'2 = cat.cuteness;
    in
    x'1;
in
{ }
