compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__destructure_custom_type_with_mixed_fields_second_unlabelled.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\ntype Cat {\n  Cat(name: String, Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(name: x, ..) = cat\n  let Cat(y, name: x) = cat\n  x\n}\n\n"
snapshot_kind: text
---
----- SOURCE CODE

type Cat {
  Cat(name: String, Int)
}

fn go(cat) {
  let Cat(x, y) = cat
  let Cat(name: x, ..) = cat
  let Cat(y, name: x) = cat
  x
}



----- COMPILED NIX
let
  Cat = name: x1: { __gleamTag = "Cat"; inherit name; _1 = x1; };
  
  go =
    cat:
    let
      x = cat.name;
      y = cat._1;
      x'1 = cat.name;
      x'2 = cat.name;
      y'1 = cat._1;
    in
    x'2;
in
{ }
